--- a/Profiles/New/config.json
+++ b/Profiles/New/config.json
@@ -1,7 +1,7 @@
 {
-    "name": "test2",
+    "name": "New",
     "chromium_version": "116",
-    "user_agent": "XDDD",
+    "user_agent": "Default",
     "proxy_flag": 0,
     "proxy_url": "",
     "proxy_user": "",
