--- a/Profiles/New1q321/config.json
+++ b/Profiles/New1q321/config.json
@@ -1,9 +1,9 @@
 {
-    "name": "New2",
+    "name": "New1q321",
     "chromium_version": "116",
     "user_agent": "Default",
-    "proxy_flag": 0,
-    "proxy_url": "",
+    "proxy_flag": 1,
+    "proxy_url": "scasd",
     "proxy_user": "",
     "proxy_pass": ""
 }
