further config improvement, add gui slider bar

--- a/Profiles/New1q321/config.json
+++ b/Profiles/New1q321/config.json
@@ -5,5 +5,6 @@
     "proxy_flag": 1,
     "proxy_url": "scasd",
     "proxy_user": "",
-    "proxy_pass": ""
+    "proxy_pass": "",
+    "auth_flag": 0
 }
