--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ psutil>=5.9.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.0.0
+
+# Optional automation dependencies
+# selenium>=4.0.0
+# playwright>=1.40.0
+# pyppeteer>=1.0.0
